# CodingSesh

./: .gitjournal.toml  .rusty-hook.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
.circleci/: config.yml
src/: main.rs
static/css/: fork-awesome.css  fork-awesome.min.css  login.css  login.min.css  main.css  main.min.css
static/js/: login.js  login.min.js  main.js  main.min.js
static/sass/: _extra.scss  _fira-sans.sass  _fonts.scss  _overrides.scss  _variables.scss  fork-awesome.scss  login.scss  main.scss
static/sass/Fork-Awesome/: _variables.scss
templates/: base.html  dashboard.html  index.html  login.html  new_page.html  user.html
