[package]
name = "coding_sesh"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-rt = "1"
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"

askama = "0.8.0"
bincode = "1.2.1"
bytes = "0.5.3"
env_logger = "0.6"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sled = "0.29.2"
uuid = { version = "0.5", features = ["serde", "v4"] }

[target.'cfg(target_family = "unix")'.dependencies]
termion = "1.5.4"

[build-dependencies]
askama = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
